Correct github address README; cache=F vignette

--- a/vignettes/IntroToCCs4prot.Rmd
+++ b/vignettes/IntroToCCs4prot.Rmd
@@ -22,7 +22,7 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(collapse = TRUE, comment = "#>", cache.lazy = TRUE, cache=TRUE)
+knitr::opts_chunk$set(collapse = TRUE, comment = "#>")
 ```
 
 ```{r style, echo = FALSE, results = 'asis'}
